--- a/Ionic - DailyPills/myApp/src/app/pages/popup/popup.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/popup/popup.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="primary" style="padding: 10px;">
     <!--    <ion-searchbar placeholder="Cerca Medicina" animated (ionChange)="liveMedicineFilter($event)"></ion-searchbar>-->
-    <ion-label class="nomeFarmaco" position="stacked">NOME FARMCAO</ion-label>
+    <ion-label class="nomeFarmaco" position="stacked">{{ farmacoName }}</ion-label>
     <br>
     <ion-label class="descrizione">{{'DETTAGLI_AGGIUNTA_TAB' | translate }}</ion-label>
 
