ion scroll inside a ion content

--- a/Ionic - DailyPills/myApp/src/app/pages/dettaglio-piano/dettaglio-piano.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/dettaglio-piano/dettaglio-piano.page.html
@@ -7,7 +7,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content color="light">
+<ion-content color="light" scrollY="false">
   <ion-refresher slot="fixed" (ionRefresh)="refreshArmadietto($event)">
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
@@ -51,8 +51,8 @@
     </ion-grid>
   </ion-card>
 
-  <!-- PROVIAMO -->
-
+  <!-- PROVIAMO
+<ion-content scrollY="true" color="light">
   <ion-card>
     <ion-virtual-scroll [items]="items" approxItemHeight="320px">
       <ion-item *virtualItem="let item">
@@ -60,7 +60,7 @@
           <ion-item-options side="start">
             <ion-item-option color="danger" (click)="delete(item)">{{ 'DELETE_BUTTON' | translate}}</ion-item-option>
           </ion-item-options>
-          <ion-item (click)="farmacoDetailNav(item.farmaco)">
+          <ion-item (click)="farmacoDetailNav(item.farmaco)" lines="none">
             <ion-thumbnail slot="start" style="height: 36px; !important; width: 36px; !important;">
               <img id="icon" src="assets/icon/pill.png">
             </ion-thumbnail>
@@ -78,31 +78,31 @@
     </ion-virtual-scroll>
   </ion-card>
 
-  <!--  DA DEPRECARE BEGIN -->
-<!--  <ion-card>-->
-<!--    <ion-list no-padding lines="full" *ngFor="let farmaco of farmacipiani$ | async" >-->
-<!--      <ion-item-sliding>-->
-<!--        <ion-item-options side="start">-->
-<!--          <ion-item-option color="danger" (click)="delete(farmaco.farmaco)">{{ 'DELETE_BUTTON' | translate}}</ion-item-option>-->
-<!--        </ion-item-options>-->
-<!--        <ion-item (click)="farmacoDetailNav(farmaco.farmaco)">-->
-<!--          <ion-thumbnail slot="start" style="height: 36px; !important; width: 36px; !important;">-->
-<!--            <img id="icon" src="assets/icon/pill.png">-->
-<!--          </ion-thumbnail>-->
-<!--          <ion-label>-->
-<!--            <h2>{{farmaco.farmaco.nome}}</h2>-->
-<!--            <p>{{ 'FORMATO' | translate}}: {{farmaco.specifica.formato}} {{farmaco.specifica.quantita}}gr</p>-->
-<!--            <p>Quantità giornaliera: {{farmaco.quantitagiorno}} pezzi</p>-->
-<!--            <p>Giorno Settimana: {{farmaco.giornosettimana}}</p>-->
-<!--            <p>Orario assunzione: {{farmaco.orarioassunzione}}</p>-->
-<!--          </ion-label>-->
-<!--          <ion-icon name="arrow-dropright"></ion-icon>-->
-<!--        </ion-item>-->
-<!--      </ion-item-sliding>-->
-<!--    </ion-list>-->
-<!--  </ion-card>-->
-  <!--  DA DEPRECARE END -->
-
+  DA DEPRECARE BEGIN -->
+  <ion-content scrollY="true" color="light">
+  <ion-card>
+    <ion-list no-padding lines="full" *ngFor="let farmaco of farmacipiani$ | async" >
+      <ion-item-sliding>
+        <ion-item-options side="start">
+          <ion-item-option color="danger" (click)="delete(farmaco.farmaco)">{{ 'DELETE_BUTTON' | translate}}</ion-item-option>
+        </ion-item-options>
+        <ion-item (click)="farmacoDetailNav(farmaco.farmaco)">
+          <ion-thumbnail slot="start" style="height: 36px; !important; width: 36px; !important;">
+            <img id="icon" src="assets/icon/pill.png">
+          </ion-thumbnail>
+          <ion-label>
+            <h2>{{farmaco.farmaco.nome}}</h2>
+            <p>{{ 'FORMATO' | translate}}: {{farmaco.specifica.formato}} {{farmaco.specifica.quantita}}gr</p>
+            <p>Quantità giornaliera: {{farmaco.quantitagiorno}} pezzi</p>
+            <p>Giorno Settimana: {{farmaco.giornosettimana}}</p>
+            <p>Orario assunzione: {{farmaco.orarioassunzione}}</p>
+          </ion-label>
+          <ion-icon name="arrow-dropright"></ion-icon>
+        </ion-item>
+      </ion-item-sliding>
+    </ion-list>
+  </ion-card>  <!--  DA DEPRECARE END -->
+  </ion-content>
 
   <ion-fab horizontal="end" vertical="bottom" slot="fixed">
     <ion-fab-button (click)="addFarmacoPianoNavigate()" color="primary">
