--- a/Ionic - DailyPills/myApp/src/app/pages/homepage/homepage.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/homepage/homepage.page.html
@@ -4,46 +4,22 @@
   </ion-toolbar>
 </ion-header>
 
-
 <ion-progress-bar color="secondary" value="0.3">30</ion-progress-bar>
-<ion-label>{{todaystring$}}</ion-label>
+<!--<ion-label>{{todaystring$}}</ion-label>-->
+
 <ion-content>
-  <ion-list lines="none">
+  <ion-list no-padding lines="none" *ngFor="let farmaco of farmacipiani$ | async" >
     <ion-list-header>
-      <ion-text color="primary">08:00</ion-text>
+      <ion-text color="primary">{{farmaco.orarioassunzione}}</ion-text>
     </ion-list-header>
-
-    <ion-item>
-      <ion-avatar slot="start">
+    <ion-item (click)="farmacoDetailNav(farmaco)">
+      <ion-thumbnail slot="start" style="height: 36px; !important; width: 36px; !important;">
         <img id="icon" src="assets/icon/pill.png">
-      </ion-avatar>
+      </ion-thumbnail>
       <ion-label>
-        <h2>pippo</h2>
-        <p>pluto</p>
-      </ion-label>
-      <ion-icon name="arrow-dropright"></ion-icon>
-    </ion-item>
-    <ion-item>
-      <ion-avatar slot="start">
-        <img id="icon" src="assets/icon/pill.png">
-      </ion-avatar>
-      <ion-label>
-        <h2>pippo</h2>
-        <p>pluto</p>
-      </ion-label>
-      <ion-icon name="arrow-dropright"></ion-icon>
-    </ion-item>
-
-    <ion-list-header>
-      <ion-text color="primary">14:00</ion-text>
-    </ion-list-header>
-    <ion-item>
-      <ion-avatar slot="start">
-        <img id="icon" src="assets/icon/pill.png">
-      </ion-avatar>
-      <ion-label>
-        <h2>pippo</h2>
-        <p>pluto</p>
+        <h2>{{farmaco.farmaco.nome}}</h2>
+        <p>{{ 'FORMATO' | translate}}: {{farmaco.specifica.formato}} {{farmaco.specifica.quantita}}gr</p>
+        <p>#: {{farmaco.quantitagiorno}} pezzi</p>
       </ion-label>
       <ion-icon name="arrow-dropright"></ion-icon>
     </ion-item>
