dettaglio piano con tab sotto

--- a/Ionic - DailyPills/myApp/src/app/pages/homepage/homepage.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/homepage/homepage.page.html
@@ -18,7 +18,7 @@
       </ion-thumbnail>
       <ion-label>
         <h2>{{farmaco.farmaco.nome}}</h2>
-        <p>{{ 'FORMATO' | translate}}: {{farmaco.specifica.formato}} {{farmaco.specifica.quantita}}gr</p>
+        <p>©: {{farmaco.specifica.formato}} {{farmaco.specifica.quantita}}gr</p>
         <p>#: {{farmaco.quantitagiorno}} pezzi</p>
       </ion-label>
       <ion-icon name="arrow-dropright"></ion-icon>
