aggiunti i back button mancanti

--- a/Ionic - DailyPills/myApp/src/app/pages/scegli-farmaco/scegli-farmaco.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/scegli-farmaco/scegli-farmaco.page.html
@@ -1,6 +1,9 @@
 
 <ion-header translucent text-center>
   <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
     <ion-title color="light">{{'SCEGLI_FARMACO_TAB' | translate}}</ion-title>
   </ion-toolbar>
 </ion-header>
