aggiunto header stile IOS e testo sotto la navbar

--- a/Ionic - DailyPills/myApp/src/app/pages/lista-piani/lista-piani.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/lista-piani/lista-piani.page.html
@@ -1,6 +1,6 @@
 
 <ion-header translucent text-center>
-  <ion-toolbar color="primary">
+  <ion-toolbar color="primary" mode="ios">
     <ion-title color="light">{{ 'LISTA_PIANI_TAB' | translate }}</ion-title>
   </ion-toolbar>
 </ion-header>
