--- a/Ionic - DailyPills/myApp/src/app/pages/scegli-farmaco/scegli-farmaco.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/scegli-farmaco/scegli-farmaco.page.html
@@ -1,6 +1,6 @@
 
 <ion-header translucent text-center>
-  <ion-toolbar color="primary">
+  <ion-toolbar color="primary" mode="ios">
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
