--- a/Ionic - DailyPills/myApp/src/app/pages/tabs/tabs.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/tabs/tabs.page.html
@@ -3,18 +3,22 @@
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="armadietto">
       <ion-icon name="briefcase"></ion-icon>
+      <ion-label>Armadietto</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="piani">
       <ion-icon name="book"></ion-icon>
+      <ion-label>Piani</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="homepage">
       <ion-icon name="home"></ion-icon>
+      <ion-label>Home</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="impostazioni">
       <ion-icon name="cog"></ion-icon>
+      <ion-label>Impostazioni</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
