dett piano refactor

--- a/Ionic - DailyPills/myApp/src/app/pages/armadietto/armadietto.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/armadietto/armadietto.page.html
@@ -21,8 +21,8 @@
                   </ion-thumbnail>
                   <ion-label>
                       <ion-text color="primary"><h2>{{farmaco.farmaco.nome}}</h2></ion-text>
-                      <p><ion-text color="dark">{{ 'FORMATO' | translate}}: </ion-text> <ion-text color="secondary">{{farmaco.specifica.formato}} {{farmaco.specifica.quantita}}gr </ion-text></p>
-                      <p><ion-text color="dark">{{ 'QUANTITA' | translate}}: </ion-text>  <ion-text color="secondary">{{farmaco.numero}} pezzi </ion-text></p>
+                      <p><ion-text color="dark">{{ 'FORMATO' | translate}}: </ion-text> <ion-text color="medium">{{farmaco.specifica.formato}} {{farmaco.specifica.quantita}}gr </ion-text></p>
+                      <p><ion-text color="dark">{{ 'QUANTITA' | translate}}: </ion-text>  <ion-text color="medium">{{farmaco.numero}} pezzi </ion-text></p>
                   </ion-label>
                   <ion-icon name="arrow-dropright"></ion-icon>
               </ion-item>
