--- a/Ionic - DailyPills/myApp/src/app/pages/dettaglio-piano/dettaglio-piano.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/dettaglio-piano/dettaglio-piano.page.html
@@ -7,106 +7,25 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content color="light" scrollY="false">
-  <ion-refresher slot="fixed" (ionRefresh)="refreshArmadietto($event)">
-    <ion-refresher-content></ion-refresher-content>
-  </ion-refresher>
-  <ion-card>
-    <ion-grid>
-      <ion-row>
-        <ion-col size="5">
-          <ion-label color="primary" position="floating">{{ 'DATA_INIZIO_PIANO' | translate }}</ion-label>
-        </ion-col>
-        <ion-col size="5">
-          {{pianodetail.inizio}}
-        </ion-col>
-        <ion-col size="2">
-          <ion-icon name="calendar" color="primary"></ion-icon>
-        </ion-col>
-      </ion-row>
 
-      <ion-row>
-        <ion-col size="5">
-          <ion-label color="primary" position="floating">{{ 'DATA_FINE_PIANO' | translate }}</ion-label>
-        </ion-col>
-        <ion-col size="5">
-          {{pianodetail.fine}}
-        </ion-col>
-        <ion-col size="2">
-          <ion-icon name="calendar" color="primary"></ion-icon>
-        </ion-col>
-      </ion-row>
+<ion-content>
 
-      <ion-row>
-        <ion-col size="5">
-          <ion-label color="primary" position="floating">{{ 'DESCRIZIONE_PIANO' | translate}}</ion-label>
-        </ion-col>
-        <ion-col size="5">
-          {{pianodetail.descrizione}}
-        </ion-col>
-        <ion-col size="2">
-          <ion-icon name="calendar" color="primary"></ion-icon>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-  </ion-card>
+<ion-tabs>
+  <ion-tab-bar slot="top">
+    <ion-tab-button tab="schedule">
+      <ion-icon name="calendar"></ion-icon>
+      <ion-label>Dettagli</ion-label>
+    </ion-tab-button>
 
-  <!-- PROVIAMO
-<ion-content scrollY="true" color="light">
-  <ion-card>
-    <ion-virtual-scroll [items]="items" approxItemHeight="320px">
-      <ion-item *virtualItem="let item">
-        <ion-item-sliding>
-          <ion-item-options side="start">
-            <ion-item-option color="danger" (click)="delete(item)">{{ 'DELETE_BUTTON' | translate}}</ion-item-option>
-          </ion-item-options>
-          <ion-item (click)="farmacoDetailNav(item.farmaco)" lines="none">
-            <ion-thumbnail slot="start" style="height: 36px; !important; width: 36px; !important;">
-              <img id="icon" src="assets/icon/pill.png">
-            </ion-thumbnail>
-            <ion-label>
-              <h2>{{item.farmaco.nome}}</h2>
-              <p>{{ 'FORMATO' | translate}}: {{item.specifica.formato}} {{item.specifica.quantita}}gr</p>
-              <p>Quantità giornaliera: {{item.quantitagiorno}} pezzi</p>
-              <p>Giorno Settimana: {{item.giornosettimana}}</p>
-              <p>Orario assunzione: {{item.orarioassunzione}}</p>
-            </ion-label>
-            <ion-icon name="arrow-dropright"></ion-icon>
-          </ion-item>
-        </ion-item-sliding>
-      </ion-item>
-    </ion-virtual-scroll>
-  </ion-card>
+    <ion-tab-button tab="speakers">
+      <ion-icon name="list"></ion-icon>
+      <ion-label>Medicinali</ion-label>
+      <ion-badge>{{countFarmaci}}</ion-badge>
+    </ion-tab-button>
+  </ion-tab-bar>
+</ion-tabs>
 
-  DA DEPRECARE BEGIN -->
-  <ion-content scrollY="true" color="light">
-  <ion-card>
-    <ion-list no-padding lines="full" *ngFor="let farmaco of farmacipiani$ | async" >
-      <ion-item-sliding>
-        <ion-item-options side="start">
-          <ion-item-option color="danger" (click)="delete(farmaco)">{{ 'DELETE_BUTTON' | translate}}</ion-item-option>
-        </ion-item-options>
-        <ion-item (click)="farmacoDetailNav(farmaco.farmaco)">
-          <ion-thumbnail slot="start" style="height: 36px; !important; width: 36px; !important;">
-            <img id="icon" src="assets/icon/pill.png">
-          </ion-thumbnail>
-          <ion-label>
-            <h2>{{farmaco.farmaco.nome}}</h2>
-            <p>{{ 'FORMATO' | translate}}: {{farmaco.specifica.formato}} {{farmaco.specifica.quantita}}gr</p>
-            <p>Quantità giornaliera: {{farmaco.quantitagiorno}} pezzi</p>
-            <p>Giorno Settimana: {{farmaco.giornosettimana}}</p>
-            <p>Orario assunzione: {{farmaco.orarioassunzione}}</p>
-          </ion-label>
-          <ion-icon name="arrow-dropright"></ion-icon>
-        </ion-item>
-      </ion-item-sliding>
-    </ion-list>
-  </ion-card>  <!--  DA DEPRECARE END -->
-  </ion-content>
 
-  <ion-fab horizontal="end" vertical="bottom" slot="fixed">
-    <ion-fab-button (click)="addFarmacoPianoNavigate()" color="primary">
-      <ion-icon name="add"></ion-icon>
-    </ion-fab-button>
-  </ion-fab>
+
+
 </ion-content>
