--- a/Ionic - DailyPills/myApp/src/app/pages/dettaglio-piano/dettaglio-piano.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/dettaglio-piano/dettaglio-piano.page.html
@@ -12,16 +12,18 @@
 
 <ion-tabs>
   <ion-tab-bar slot="top">
+
     <ion-tab-button tab="dettaglio">
       <ion-icon name="calendar"></ion-icon>
       <ion-label>{{'DETTAGLIO_PIANO_SUB_LEFT' | translate}}</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="medicinePiano">
+    <ion-tab-button tab="farmaci">
       <ion-icon name="list"></ion-icon>
       <ion-label>{{'DETTAGLIO_PIANO_SUB_RIGHT' | translate}}</ion-label>
       <ion-badge>{{1}}</ion-badge>
     </ion-tab-button>
+
   </ion-tab-bar>
 </ion-tabs>
 </ion-content>
