--- a/Ionic - DailyPills/myApp/src/app/pages/lista-piani/lista-piani.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/lista-piani/lista-piani.page.html
@@ -22,7 +22,7 @@
           </ion-thumbnail>
           <ion-label>
             <h2>{{piano.nome}}</h2>
-            <p>{{ 'DATA_INIZIO' | translate }}: {{piano.inizio}} </p>
+            <p><ion-text color="medium">{{ 'DATA_INIZIO' | translate }}</ion-text>: {{piano.inizio}} </p>
             <p>{{ 'DATA_FINE' | translate }}: {{piano.fine}} </p>
           </ion-label>
           <ion-icon name="arrow-dropright"></ion-icon>
