--- a/Ionic - DailyPills/myApp/src/app/pages/dettaglio-piano/dettaglio-piano.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/dettaglio-piano/dettaglio-piano.page.html
@@ -1,29 +1,42 @@
 <ion-header translucent text-center>
   <ion-toolbar color="primary" mode="ios">
-    <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
-    </ion-buttons>
-    <ion-title color="light">Prova</ion-title>
+    <ion-title color="light">{{'ARMADIETTO_TAB' | translate}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
+<ion-content fullscreen>
+  <ion-slides pager="true" [options]="slideOpts">
+    <ion-slide>
+        <ion-grid>
+          <ion-row>
+            <ion-col text-center="true">
+              <div>
+                <ion-label color="primary" align="center">Data Inizio</ion-label><br/>
+                <ion-label color="medium" style="font-size: 15px" align="center">{{'2019-20-12'}}</ion-label>
+              </div>
+            </ion-col>
+            <ion-col size="2" text-center>
+              <ion-icon id="calendario" name="calendar" color="primary"></ion-icon>
+            </ion-col>
+            <ion-col text-center="true">
+              <div>
+                <ion-label color="primary" align="center">Data Fine</ion-label><br/>
+                <ion-label color="medium"  align="center" style="font-size: 15px">{{'2019-20-12'}}</ion-label>
+              </div>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col text-center="true" size="5">
+              <ion-label color="primary">Descrizione</ion-label><br/>
+              <ion-text>{{'descrizione'}}</ion-text>
+            </ion-col>
 
-<ion-content>
-
-<ion-tabs>
-  <ion-tab-bar slot="top">
-
-    <ion-tab-button tab="dettaglio">
-      <ion-icon name="calendar"></ion-icon>
-      <ion-label>{{'DETTAGLIO_PIANO_SUB_LEFT' | translate}}</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="farmaci">
-      <ion-icon name="list"></ion-icon>
-      <ion-label>{{'DETTAGLIO_PIANO_SUB_RIGHT' | translate}}</ion-label>
-      <ion-badge>{{1}}</ion-badge>
-    </ion-tab-button>
-
-  </ion-tab-bar>
-</ion-tabs>
+          </ion-row>
+          <ion-button size="large" expand="full">EDIT</ion-button>
+        </ion-grid>
+    </ion-slide>
+    <ion-slide>
+      <h1>Slide 2</h1>
+    </ion-slide>
+  </ion-slides>
 </ion-content>
