--- a/Ionic - DailyPills/myApp/src/app/pages/dettaglio-piano/dettaglio-piano.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/dettaglio-piano/dettaglio-piano.page.html
@@ -18,7 +18,7 @@
         <ion-tab-button (click)="changeTab(false)">
           <ion-icon name="list"></ion-icon>
           <ion-label>{{'DETTAGLIO_PIANO_SUB_RIGHT' | translate}}</ion-label>
-          <ion-badge>{{1}}</ion-badge>
+          <ion-badge>{{countFarmaci}}</ion-badge>
         </ion-tab-button>
       </ion-col>
     </ion-row>
