--- a/Ionic - DailyPills/myApp/src/app/pages/dettaglio-piano/dettaglio-piano.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/dettaglio-piano/dettaglio-piano.page.html
@@ -1,89 +1,118 @@
 <ion-header translucent text-center>
-  <ion-toolbar color="primary" mode="ios">
+  <ion-toolbar color="primary" mode="ios" no-shadow>
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
     <ion-title color="light">{{'ARMADIETTO_TAB' | translate}}</ion-title>
   </ion-toolbar>
-</ion-header>
-
-<ion-content scrollY="false">
   <ion-grid>
-    <ion-row style="box-shadow: 0 8px 6px -6px #eee;">
+    <ion-row *ngIf="showLeftTab">
       <ion-col text-center="true">
-        <ion-tab-button (click)="changeTab(true)">
-          <ion-icon name="calendar"></ion-icon>
-          <ion-label>{{'DETTAGLIO_PIANO_SUB_LEFT' | translate}}</ion-label>
+        <ion-tab-button selected="true" (click)="changeTab(true)">
+          <ion-icon color="primary" name="calendar"></ion-icon>
+          <ion-label color="primary">{{'DETTAGLIO_PIANO_SUB_LEFT' | translate}}</ion-label>
         </ion-tab-button>
       </ion-col>
       <ion-col text-center="true">
         <ion-tab-button (click)="changeTab(false)">
-          <ion-icon name="list"></ion-icon>
-          <ion-label>{{'DETTAGLIO_PIANO_SUB_RIGHT' | translate}}</ion-label>
-          <ion-badge>{{countFarmaci}}</ion-badge>
+          <ion-icon name="list" color="dark"></ion-icon>
+          <ion-label color="dark">{{'DETTAGLIO_PIANO_SUB_RIGHT' | translate}}</ion-label>
+          <ion-badge color="dark">{{countFarmaci}}</ion-badge>
+        </ion-tab-button>
+      </ion-col>
+    </ion-row>
+    <ion-row *ngIf="!showLeftTab">
+      <ion-col text-center="true">
+        <ion-tab-button selected="true" (click)="changeTab(true)">
+          <ion-icon color="dark" name="calendar"></ion-icon>
+          <ion-label color="dark">{{'DETTAGLIO_PIANO_SUB_LEFT' | translate}}</ion-label>
+        </ion-tab-button>
+      </ion-col>
+      <ion-col text-center="true">
+        <ion-tab-button (click)="changeTab(false)">
+          <ion-icon name="list" color="primary"></ion-icon>
+          <ion-label color="primary">{{'DETTAGLIO_PIANO_SUB_RIGHT' | translate}}</ion-label>
+          <ion-badge color="primary">{{countFarmaci}}</ion-badge>
         </ion-tab-button>
       </ion-col>
     </ion-row>
   </ion-grid>
-
+</ion-header>
 
 <ion-content>
-  <div *ngIf="showLeftTab">
-    <ion-grid>
-      <ion-row>
-        <ion-col text-center="true">
-          <div>
-            <ion-label color="primary" align="center">Data Inizio</ion-label><br/>
-            <ion-label color="medium" style="font-size: 15px" align="center">{{visualizeDate(pianodetail.inizio)}}</ion-label>
-          </div>
-        </ion-col>
-        <ion-col size="2" text-center>
-          <ion-icon id="calendario" name="calendar" color="primary"></ion-icon>
-        </ion-col>
-        <ion-col text-center="true">
-          <div>
-            <ion-label color="primary" align="center">Data Fine</ion-label><br/>
-            <ion-label color="medium"  align="center" style="font-size: 15px">{{visualizeDate(pianodetail.fine)}}</ion-label>
-          </div>
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col text-center="true" size="5">
-          <ion-label color="primary">Descrizione</ion-label><br/>
-          <ion-text>{{pianodetail.descrizione}}</ion-text>
-        </ion-col>
+    <div *ngIf="showLeftTab">
+      <ion-grid>
+        <ion-row>
+          <ion-col text-center="true">
+            <ion-text color="primary" style="font-size: 12px;">Piano Terapeutico</ion-text>
+          </ion-col>
+        </ion-row>
+        <ion-row style="box-shadow: 0 8px 6px -6px #eee;">
+          <ion-col text-center="true">
+            <ion-text color="medium" style="font-size: 20px; font-weight: 400;">{{pianodetail.nome}}</ion-text>
+          </ion-col>
+        </ion-row>
+        <ion-row style="box-shadow: 0 8px 6px -6px #eee;">
+          <ion-col text-center="true">
+            <div>
+              <ion-label color="primary" align="center" style="font-size: 14px;">Data Inizio</ion-label><br/>
+              <ion-label color="medium" style="font-size: 13px" align="center">{{visualizeDate(pianodetail.inizio)}}</ion-label>
+            </div>
+          </ion-col>
+          <ion-col size="2" text-center>
+            <ion-icon id="calendario" name="calendar" style="font-size: 45px" color="medium"></ion-icon>
+          </ion-col>
+          <ion-col text-center="true">
+            <div>
+              <ion-label color="primary" align="center" style="font-size: 14px;">Data Fine</ion-label><br/>
+              <ion-label color="medium"  align="center" style="font-size: 13px">{{visualizeDate(pianodetail.fine)}}</ion-label>
+            </div>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col size="5" text-center>
+            <ion-label color="primary" style="font-size: 14px;">Descrizione</ion-label><br/>
 
-      </ion-row>
-      <ion-button size="large" expand="full">EDIT</ion-button>
-    </ion-grid>
+          </ion-col>
+          <ion-col size="12">
+            <ion-text color="medium">{{pianodetail.descrizione}}</ion-text>
+
+          </ion-col>
+        </ion-row>
+        <ion-button  style="position: absolute; left: 0; right: 0; bottom: 20px" size="large" expand="full">EDIT</ion-button>
+      </ion-grid>
 
 
-  </div>
+    </div>
 
-  <div *ngIf="!showLeftTab">
-    <ion-list no-padding lines="full" *ngFor="let farmaco of farmacipiani$ | async" >
-      <ion-item-sliding>
-        <ion-item-options side="start">
-          <ion-item-option color="danger" (click)="delete(farmaco)">{{ 'DELETE_BUTTON' | translate}}</ion-item-option>
-        </ion-item-options>
-        <ion-item (click)="farmacoDetailNav(farmaco.farmaco)">
-          <ion-thumbnail slot="start" style="height: 36px; !important; width: 36px; !important;">
-            <img id="icon" src="assets/icon/pill.png">
-          </ion-thumbnail>
-          <ion-label>
-            <ion-text color="primary"><h2>{{farmaco.farmaco.nome}}</h2></ion-text>
-            <p><ion-text color="dark">{{ 'FORMATO' | translate}} : </ion-text> <ion-text color="medium"> {{farmaco.specifica.formato}} {{farmaco.specifica.quantita}}gr</ion-text></p>
-            <p><ion-text color="dark">Quantità giornaliera : </ion-text> <ion-text color="medium">{{farmaco.quantitagiorno}} pezzi </ion-text></p>
-            <p><ion-text color="dark">Giorno Settimana : </ion-text> <ion-text color="medium">{{farmaco.giornosettimana}}</ion-text></p>
-            <p><ion-text color="dark">Orario assunzione : </ion-text> <ion-text color="medium">{{farmaco.orarioassunzione}}</ion-text></p>
-          </ion-label>
-          <ion-icon name="arrow-dropright"></ion-icon>
-        </ion-item>
-      </ion-item-sliding>
-    </ion-list>
-
-  </div>
-</ion-content></ion-content>
+    <div *ngIf="!showLeftTab">
+      <ion-list no-padding lines="full" *ngFor="let farmaco of farmacipiani$ | async" >
+        <ion-item-sliding>
+          <ion-item-options side="start">
+            <ion-item-option color="danger" (click)="delete(farmaco)">{{ 'DELETE_BUTTON' | translate}}</ion-item-option>
+          </ion-item-options>
+          <ion-item (click)="farmacoDetailNav(farmaco.farmaco)">
+            <ion-thumbnail slot="start" style="height: 36px; !important; width: 36px; !important;">
+              <img id="icon" src="assets/icon/pill.png">
+            </ion-thumbnail>
+            <ion-label>
+              <ion-text color="primary"><h2>{{farmaco.farmaco.nome}}</h2></ion-text>
+              <p><ion-text color="dark">{{ 'FORMATO' | translate}} : </ion-text> <ion-text color="medium"> {{farmaco.specifica.formato}} {{farmaco.specifica.quantita}}gr</ion-text></p>
+              <p><ion-text color="dark">Quantità giornaliera : </ion-text> <ion-text color="medium">{{farmaco.quantitagiorno}} pezzi </ion-text></p>
+              <p><ion-text color="dark">Giorno Settimana : </ion-text> <ion-text color="medium">{{farmaco.giornosettimana}}</ion-text></p>
+              <p><ion-text color="dark">Orario assunzione : </ion-text> <ion-text color="medium">{{farmaco.orarioassunzione}}</ion-text></p>
+            </ion-label>
+            <ion-icon name="arrow-dropright"></ion-icon>
+          </ion-item>
+        </ion-item-sliding>
+      </ion-list>
+    </div>
+  <ion-fab horizontal="end" vertical="bottom" slot="fixed" *ngIf="!showLeftTab">
+    <ion-fab-button (click)="addFarmacoPianoNavigate()" color="primary">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+</ion-content>
 
 
   <!-- NON CANCELLARE
