--- a/Ionic - DailyPills/myApp/src/app/pages/dettaglio-piano/dettaglio-piano.page.scss
+++ b/Ionic - DailyPills/myApp/src/app/pages/dettaglio-piano/dettaglio-piano.page.scss
@@ -2,3 +2,22 @@ ion-grid {
   background-color: white;
 }
 
+.labelPiano {
+  font-size: 14px;
+}
+
+.data {
+  font-size: 20px;
+  font-weight: 400;
+}
+
+#editB {
+  position: absolute;
+  left: 10px;
+  right: 10px;
+  bottom: 20px;
+}
+
+.icon {
+  font-size: 45px;
+}
