gen componenti dett ass e sistemato dettaglio farmaco

--- a/Ionic - DailyPills/myApp/src/app/pages/dettaglio-farmaco/dettaglio-farmaco.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/dettaglio-farmaco/dettaglio-farmaco.page.html
@@ -10,10 +10,10 @@
 
 <ion-content fullscreen padding-top="20">
 
-  <!--
-  <ion-avatar>
-    <img  src="assets/icon/pillolaDettaglio.png">
-  </ion-avatar>-->
+
+  <ion-thumbnail>
+    <img  src="assets/icon/medical.png">
+  </ion-thumbnail>
   <ion-list lines="none">
 
     <ion-item>
