--- a/Ionic - DailyPills/myApp/src/app/pages/dettaglio-assunzione/dettaglio-assunzione.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/dettaglio-assunzione/dettaglio-assunzione.page.html
@@ -1,9 +1,60 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>dettaglioAssunzione</ion-title>
+<ion-header translucent text-center>
+  <ion-toolbar color="primary" mode="ios">
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-title color="light">{{'DETTAGLIO_ASSUNZIONE_TAB' | translate}}</ion-title>
   </ion-toolbar>
+
 </ion-header>
 
-<ion-content>
+<ion-content fullscreen padding-top="20">
 
+
+  <ion-thumbnail>
+    <img  src="assets/icon/medical.png">
+  </ion-thumbnail>
+
+  <ion-list lines="none">
+    <ion-item>
+      <!--<ion-icon name="contact" slot="start" color="primary"></ion-icon>-->
+      <ion-label>
+        <ion-label color="primary"><h2>{{'NOME'| translate}}</h2></ion-label>x
+        <ion-label color="medium"><p>Tachipirina</p></ion-label>
+      </ion-label>
+    </ion-item>
+
+      <ion-item>
+        <!--<<ion-icon name="clipboard" slot="start" color="primary"></ion-icon>-->
+        <ion-label>
+          <ion-label color="primary"><h2>{{'FORMATO'| translate}}</h2></ion-label>
+          <ion-label color="medium"><p>bho bho bho </p></ion-label>
+        </ion-label>
+      </ion-item>
+
+    <ion-item>
+      <!--<<ion-icon name="clipboard" slot="start" color="primary"></ion-icon>-->
+      <ion-label>
+        <ion-label color="primary"><h2>{{'ORARIO'| translate}}</h2></ion-label>
+        <ion-label color="medium"><p>18:00</p></ion-label>
+      </ion-label>
+    </ion-item>
+
+      <ion-item>
+        <!--<<ion-icon name="clipboard" slot="start" color="primary"></ion-icon>-->
+        <ion-label>
+          <ion-label color="primary"><h2>{{'QUANTITA'| translate}}</h2></ion-label>
+          <ion-label color="medium"><p>2pz</p></ion-label>
+        </ion-label>
+      </ion-item>
+
+      <ion-item>
+        <!--<<ion-icon name="clipboard" slot="start" color="primary"></ion-icon>-->
+        <ion-label>
+          <ion-label color="primary"><h2>{{'GIORNO'| translate}}</h2></ion-label>
+          <ion-label color="medium"><p>lunedi</p></ion-label>
+        </ion-label>
+      </ion-item>
+
+  </ion-list>
 </ion-content>
